# coding-search-mcp

./: .gitmodules  Cargo.toml  README.md  output.json  sample.json  sample2.json  so-question.json
src/: main.rs
testdata/: sample2.json  sample3.json  sample4.json  so-answer.json
