[package]
name = "coding-research-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive", "env"] }
cmd_lib = "2.0.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
rmcp = { version = "0.6.4", features = ["schemars", "transport-io"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt", "macros", "sync"] }
url = "2.5.7"
